--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -80,29 +80,31 @@
                     <!-- Blog Comments -->
 
                     <!-- Comments Form -->
-                    <div class="well margin-well" ng-repeat="review in detailsControllerModel.defaultReview">
+                    <div class="well margin-well">
                         <h4>Start your review!</h4>
-                        <div ng-hide="detailsControllerModel.readonly"><ng-rating ng-model="review.rating"
-                                   icon-class="review.iconClass"
-                                   editable="review.editableRating"
-                                   stars-count="review.starsCount"
-                                   based-on="review.basedOn"
-                                   show-grade="review.showGrade">
-                        </ng-rating></div>
-                        <div ng-if="detailsControllerModel.readonly"><ng-rating ng-model="review.rating"
-                                   icon-class="review.iconClass"
+                        <div ng-hide="detailsControllerModel.readonly"><ng-rating ng-model="detailsControllerModel.defaultReview.rating"
+                                   icon-class="detailsControllerModel.defaultReview.iconClass"
+                                   editable="detailsControllerModel.defaultReview.editableRating"
+                                   stars-count="detailsControllerModel.defaultReview.starsCount"
+                                   based-on="detailsControllerModel.defaultReview.basedOn"
+                                   show-grade="detailsControllerModel.defaultReview.showGrade">
+                            </ng-rating>
+                        </div>
+                        <div ng-if="detailsControllerModel.readonly"><ng-rating ng-model="detailsControllerModel.defaultReview.rating"
+                                   icon-class="detailsControllerModel.defaultReview.iconClass"
                                    editable=false
-                                   stars-count="review.starsCount"
-                                   based-on="review.basedOn"
-                                   show-grade="review.showGrade">
-                        </ng-rating></div>
+                                   stars-count="detailsControllerModel.defaultReview.starsCount"
+                                   based-on="detailsControllerModel.defaultReview.basedOn"
+                                   show-grade="detailsControllerModel.defaultReview.showGrade">
+                            </ng-rating>
+                        </div>
                         <form role="form">
                             <div class="form-group">
                                 <textarea ng-readonly="detailsControllerModel.readonly" class="form-control"
-                                          ng-model="review.review" rows="3"></textarea>
+                                          ng-model="detailsControllerModel.defaultReview.review" rows="3"></textarea>
                             </div>
                             <button ng-disabled="detailsControllerModel.readonly"
-                                    ng-click="detailsControllerModel.addReview(review)"
+                                    ng-click="detailsControllerModel.addReview(detailsControllerModel.defaultReview)"
                                     class="btn btn-primary">Post Review</button>
                         </form>
                     </div>
@@ -134,7 +136,7 @@
                                 <div class="col-xs-8" ng-hide="detailsControllerModel.selectedreview == $index">
                                         <ng-rating ng-model="review.rating"
                                                icon-class="review.iconClass"
-                                               editable="review.editableRating"
+                                               editable="false"
                                                stars-count="review.starsCount"
                                                based-on="review.basedOn"
                                                show-grade="review.showGrade">
