Added avg rating for restaurant

--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -29,7 +29,10 @@
     <div class="row">
         <div class="col-sm-3">
             <img src={{detailsControllerModel.imageurl}} class="img-responsive"/>
-            <img src={{detailsControllerModel.rest.rating_img_url}} class="img-responsive"/>
+            <!--<img src={{detailsControllerModel.rest.rating_img_url}} class="img-responsive"/>-->
+            <ng-rating ng-model="detailsControllerModel.avgRating"
+                       editable="false">
+            </ng-rating>
 
         </div>
         <div class="col-sm-5">
