Passed db and mongoose instance to user model and also required user schema in user model

--- a/public/project/client/views/search/searchresult.view.html
+++ b/public/project/client/views/search/searchresult.view.html
@@ -41,6 +41,7 @@
             <div class="row">{{$index}}. <a href="#/detail/{{rest.id}}">{{rest.name}}</a></div>
             <div class="row"><p><img ng-src="{{rest.rating_img_url}}"/> {{rest.review_count}} Reviews</p></div>
             <div class="row"><p>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</p></div>
+            <div class="row"><i class="fa fa-bookmark"></i> Save</div>
         </div>
         <div class="col-xs-5 col-sm-5">
             <p>{{rest.location.neighborhoods[0]}}</p>
