--- a/public/assignment4/client/views/users/register.view.html
+++ b/public/assignment4/client/views/users/register.view.html
@@ -36,7 +36,7 @@
             <label for="email" class="col-sm-2">Email:</label>
             <div class="col-sm-10">
                 <input type="email"
-                       ng-model="model.user.emailId"
+                       ng-model="model.user.emails"
                        class="form-control"
                        id="email"
                        placeholder="Email">
