Implemented update functionality through mongoose

--- a/public/assignment4/client/views/users/profile.view.html
+++ b/public/assignment4/client/views/users/profile.view.html
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
-                        <input type="email" ng-model="model.currentUser.emailId"
+                        <input type="email" ng-model="model.currentUser.emails"
                                class="form-control" id="email" placeholder="Email">
                     </div>
                 </div>
