Added autocomplete of places to location textbox

--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -13,6 +13,7 @@
                             </span>
                         <input ng-model="homeControllerModel.loc"
                                class="form-control margin-searchbox"
+                               id="loc"
                                placeholder="Boston"/>
                         </div>
                     </div>
