--- a/public/project/client/css/style.css
+++ b/public/project/client/css/style.css
@@ -230,6 +230,13 @@ footer {
         margin-right: 15px;
     }
 
+    .hidinxs{
+        display: none;
+    }
+
+    .txtright{
+        float: right;
+    }
 
 }
 
@@ -249,6 +256,7 @@ footer {
     .margin-set{
         margin-left: 5px;
     }
+
 }
 
 
