--- a/public/project/client/views/search/searchresult.view.html
+++ b/public/project/client/views/search/searchresult.view.html
@@ -25,25 +25,26 @@
 <!--</div>-->
 <div class="container">
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-xs-6 col-sm-6">
             <p class="lead">Best Restaurant in Boston</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-6 col-sm-6">
             <p class="lead">Showing 1-10 of 100</p>
         </div>
     </div>
     <div class="row" ng-repeat="rest in data.businesses" ng-if="$index >= 1">
         <hr>
-        <div class="col-xs -2 col-sm-2">
+        <div class="col-xs-3 col-sm-2">
             <img ng-src="{{rest.image_url}}"/>
         </div>
-        <div class="col-xs -5 col-sm-5">
+        <div class="col-xs-6 col-sm-5 txtright">
             <div class="row">{{$index}}. <a href="#/detail/{{rest.id}}">{{rest.name}}</a></div>
             <div class="row"><p><img ng-src="{{rest.rating_img_url}}"/> {{rest.review_count}} Reviews</p></div>
             <div class="row"><p>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</p></div>
+            <div class="row visible-xs"><p>{{rest.location.address[0]}}, {{rest.location.city}}</p></div>
             <div class="row"><i class="fa fa-bookmark"></i> Save</div>
         </div>
-        <div class="col-xs-5 col-sm-5">
+        <div class="hidinxs col-xs-3 col-sm-5">
             <p>{{rest.location.neighborhoods[0]}}</p>
             <p>{{rest.location.display_address[0]}}</p>
             <p>{{rest.location.display_address[2]}}</p>
@@ -52,10 +53,10 @@
     </div>
     <div class="row">
         <hr>
-        <div class="col-sm-3">
+        <div class="col-xs-3">
             <p>Page 1 of 10</p>
         </div>
-        <div class="col-sm-9 text-right">
+        <div class="col-xs-9 text-right">
             <p>1 2 3 4 5 6 Next ></p>
         </div>
         <hr>
