--- a/public/assignment4/client/views/users/profile.view.html
+++ b/public/assignment4/client/views/users/profile.view.html
@@ -43,6 +43,13 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="phone" class="col-sm-2">Phone:</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="model.currentUser.phones"
+                               class="form-control" id="phone" placeholder="Phone">
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <a href="" ng-click="model.update(model.currentUser)"
                            class="btn btn-primary btn-block">Update</a>
@@ -50,6 +57,11 @@
 
                 </div>
             </form>
+            <div ng-if="model.show" class="alert alert-info alert-dismissable">
+                <a class="panel-close close" data-dismiss="alert">×</a>
+                <i class="fa fa-info-circle"></i>
+                <strong>User information updated successfully.</strong>
+            </div>
         </div>
     </div>
 </div>
