--- a/public/assignment/client/views/forms/field.view.html
+++ b/public/assignment/client/views/forms/field.view.html
@@ -116,6 +116,58 @@
                         </div>
                     </form>
                 </div>
+                <div class="row" ng-switch-when="PASSWORD">
+                    <form>
+                        <div class="form-group col-xs-5 col-sm-7 p-left">
+                            <input type="password"
+                                   placeholder="{{field.placeholder}}"
+                                   class="form-control"/>
+                        </div>
+                        <div class="col-xs-7 col-sm-5 gly_center">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="" ng-click="model.cloneField(field)">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="" ng-click="model.removeField(field)">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="" class="dragButton">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="row" ng-switch-when="EMAIL">
+                    <form>
+                        <div class="form-group col-xs-5 col-sm-7 p-left">
+                            <input type="email"
+                                   placeholder="{{field.placeholder}}"
+                                   class="form-control"/>
+                        </div>
+                        <div class="col-xs-7 col-sm-5 gly_center">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="" ng-click="model.cloneField(field)">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="" ng-click="model.removeField(field)">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="" class="dragButton">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
+                        </div>
+                    </form>
+                </div>
                 <div class="row" ng-switch-when="OPTIONS">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
@@ -223,6 +275,8 @@
                             <option value="3">Checkboxes Field</option>
                             <option value="4">Radio Buttons Field</option>
                             <option value="5">MultiLine Text Field</option>
+                            <option value="6">Email Text field</option>
+                            <option value="7">Password Text field</option>
                         </select>
                     </div>
                     <div class="col-xs-7 col-sm-5 gly_center">
