--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -38,8 +38,15 @@
                 <div class="form-group">
                     <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
-                        <input type="email" ng-model="model.currentUser.emailId"
+                        <input type="text" ng-model="model.currentUser.emails"
                                class="form-control" id="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="phone" class="col-sm-2">Phone:</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="model.currentUser.phones"
+                               class="form-control" id="phone" placeholder="Phone">
                     </div>
                 </div>
                 <div class="form-group">
@@ -50,6 +57,11 @@
 
                 </div>
             </form>
+            <div ng-if="model.show" class="alert alert-info alert-dismissable">
+                <a class="panel-close close" data-dismiss="alert">×</a>
+                <i class="fa fa-info-circle"></i>
+                <strong>User information updated successfully.</strong>
+            </div>
         </div>
     </div>
 </div>
