--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -12,8 +12,8 @@
                                 <a ><i class="fa fa-location-arrow"></i></a>
                             </span>
                         <input ng-model="homeControllerModel.loc"
+                               g-places-autocomplete
                                class="form-control margin-searchbox"
-                               id="loc"
                                placeholder="Boston"/>
                         </div>
                     </div>
