--- a/public/project/client/views/search/searchhome.view.html
+++ b/public/project/client/views/search/searchhome.view.html
@@ -67,7 +67,7 @@
     <!-- /.row -->
     <div class="row">
         <div ng-repeat="rest in searchControllerModel.popularRestImages">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-4 rest-container">
                 <div class="thumbnail">
                     <a href=""
                        ng-click="searchControllerModel.search(searchControllerModel.popularRestaurants.names[$index],'New York')">
