--- a/public/project/client/views/search/searchdetails.view.html
+++ b/public/project/client/views/search/searchdetails.view.html
@@ -27,7 +27,7 @@
 
         </div>
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-5 restdetails-container">
             <img src={{detailsControllerModel.imageurl}} class="img-responsive"/>
             <!--<img src={{detailsControllerModel.rest.rating_img_url}} class="img-responsive"/>-->
             <ng-rating ng-model="detailsControllerModel.avgRating"
@@ -35,7 +35,7 @@
             </ng-rating>
 
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-4">
             <p>
                 {{detailsControllerModel.rest.snippet_text}}
             </p>
@@ -56,7 +56,7 @@
             <hr>
         </div>
         <!--Map div-->
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div id="map" class="map"></div>
             <!--<ng-map zoom="16" center="[{{detailsControllerModel.rest.location.coordinate.latitude}},-->
             <!--{{detailsControllerModel.rest.location.coordinate.longitude}}]">-->
@@ -67,7 +67,6 @@
             <!--</ng-map>-->
         </div>
         <!--End Map div-->
-
     </div>
         <div ng-if="!currentUser" class="alert alert-info alert-dismissable">
             <a class="panel-close close" data-dismiss="alert">×</a>
