--- a/public/project/client/views/search/searchresult.view.html
+++ b/public/project/client/views/search/searchresult.view.html
@@ -24,7 +24,7 @@
     <!--</div>-->
 <!--</div>-->
 <div class="container">
-    <div class="row">
+    <div class="row text-center">
         <div class="col-xs-6 col-sm-6">
             <p class="lead">Best Restaurant in Boston</p>
         </div>
@@ -34,7 +34,7 @@
     </div>
     <div class="row" ng-repeat="rest in data.businesses" ng-if="$index >= 1">
         <hr>
-        <div class="col-xs-3 col-sm-2">
+        <div class="col-xs-3 col-sm-2 text-center">
             <img ng-src="{{rest.image_url}}"/>
         </div>
         <div class="col-xs-6 col-sm-5 txtright">
@@ -44,7 +44,7 @@
             <div class="row visible-xs"><p>{{rest.location.address[0]}}, {{rest.location.city}}</p></div>
             <div class="row"><i class="fa fa-bookmark"></i> Save</div>
         </div>
-        <div class="hidinxs col-xs-3 col-sm-5">
+        <div class="hidinxs col-xs-3 col-sm-5 text-center">
             <p>{{rest.location.neighborhoods[0]}}</p>
             <p>{{rest.location.display_address[0]}}</p>
             <p>{{rest.location.display_address[2]}}</p>
