Added detect current location functionality on home page search, created google service

--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -9,7 +9,8 @@
                     <div class="col-sm-5 col-md-5">
                         <div class="input-group">
                             <span class="input-group-addon">
-                                <a ><i class="fa fa-location-arrow"></i></a>
+                                <a href="" title="Use Current Location" ng-click="homeControllerModel.getLocation()">
+                                    <i class="fa fa-location-arrow"></i></a>
                             </span>
                         <input ng-model="homeControllerModel.loc"
                                g-places-autocomplete
