--- a/public/project-next/client/views/search/searchhome.view.html
+++ b/public/project-next/client/views/search/searchhome.view.html
@@ -62,8 +62,13 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="lead page-header">Popular Food Places near you
-                <small>Secondary Text</small>
+                <small><i class="fa fa-line-chart fa-lg"></i></small>
             </h1>
+        </div>
+    </div>
+    <div ng-hide="searchControllerModel.hidespinnner" class="row">
+        <div class="col-sm-offset-3 col-sm-6">
+            <p>Searching Popular food places near you...<i class="fa fa-spinner fa-pulse"></i></p>
         </div>
     </div>
     <!-- /.row -->
@@ -72,7 +77,7 @@
             <div class="col-sm-6 col-md-4 rest-container">
                 <div class="thumbnail">
                     <a href=""
-                       ng-click="searchControllerModel.search(searchControllerModel.popularRestaurants.names[$index],'New York')">
+                       ng-click="searchControllerModel.search(searchControllerModel.popularRestaurants.names[$index],searchControllerModel.loc)">
                         <img class="img-responsive" ng-src="{{searchControllerModel.popularRestaurants.images[$index]}}"/>
                     </a>
                     <div class="caption">
