Worked in liking of restaurant by user and storing like in database

--- a/public/project-next/client/css/style.css
+++ b/public/project-next/client/css/style.css
@@ -219,6 +219,9 @@ footer {
 .fa-spinner{
     font-size: 3em;
 }
+.orangecolor{
+    color: orangered;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
