--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -50,8 +50,13 @@
                  {{detailsControllerModel.rest.display_phone}}</p>
             <hr>
 
-            <i class="fa fa-thumbs-o-up fa-lg"></i>Like &nbsp
-            <i class="fa fa-thumbs-o-down fa-lg"></i>Dislike &nbsp
+            <a ng-hide="detailsControllerModel.isliked" href=""
+               ng-click="detailsControllerModel.likeRest(detailsControllerModel.rest.id)">
+                <i title="Like" class="fa fa-thumbs-o-up fa-lg"></i></a>
+            <a ng-if="detailsControllerModel.isliked" href=""
+               ng-click="detailsControllerModel.likeRest(detailsControllerModel.rest.id)">
+                <i title="Unlike" class="fa fa-thumbs-o-up fa-lg orangecolor"></i></a> &nbsp
+            <!--<i class="fa fa-thumbs-o-down fa-lg"></i>Dislike &nbsp-->
             <i class="fa fa-bookmark fa-lg"></i>Save
             <hr>
         </div>
