completed unlike functionality for Restaurant

--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -54,7 +54,7 @@
                ng-click="detailsControllerModel.likeRest(detailsControllerModel.rest.id)">
                 <i title="Like" class="fa fa-thumbs-o-up fa-lg"></i></a>
             <a ng-if="detailsControllerModel.isliked" href=""
-               ng-click="detailsControllerModel.likeRest(detailsControllerModel.rest.id)">
+               ng-click="detailsControllerModel.undolikeRest(detailsControllerModel.rest.id)">
                 <i title="Unlike" class="fa fa-thumbs-o-up fa-lg orangecolor"></i></a> &nbsp
             <!--<i class="fa fa-thumbs-o-down fa-lg"></i>Dislike &nbsp-->
             <i class="fa fa-bookmark fa-lg"></i>Save
