Added follow functionality in profile using mongodb and mongoose

--- a/public/project-next/client/views/header/header.view.html
+++ b/public/project-next/client/views/header/header.view.html
@@ -47,7 +47,7 @@
                     <a href="#/login" class="margin-set2">Login</a>
                 </li>
                 <li ng-show="currentUser">
-                    <a href="#/profile">{{currentUser.username}}</a>
+                    <a href="#/{{currentUser._id}}/profile">{{currentUser.username}}</a>
                 <li ng-hide="!currentUser"
                     ng-click="headerControllerModel.logOut()">
                     <a href="">Logout</a>
