--- a/public/project-next/client/views/users/reviews.view.html
+++ b/public/project-next/client/views/users/reviews.view.html
@@ -3,19 +3,16 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#/profile">My Profile</a>
+                <a href="#/{{reviewsControllerModel.userId}}/profile">My Profile</a>
             </li>
             <li>
-                <a href="#/profile/reviews">Overview</a>
+                <a href="#/{{reviewsControllerModel.userId}}/profile/reviews">Overview</a>
             </li>
             <li>
                 <a href="">Favorite Places</a>
             </li>
             <li>
                 <a href="">Likes</a>
-            </li>
-            <li>
-                <a href="">Dislikes</a>
             </li>
             <li>
                 <a href="">Followers</a>
