--- a/public/project-next/client/views/header/header.view.html
+++ b/public/project-next/client/views/header/header.view.html
@@ -8,7 +8,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand margin-set" href="#/home">Eat'n'Review</a>
+            <li ng-if="currentUser">
+                <a class="navbar-brand margin-set" href="#/searchhome">Eat'n'Review</a>
+            </li>
+            <li ng-if="!currentUser">
+                <a class="navbar-brand margin-set" href="#/home">Eat'n'Review</a>
+            </li>
         </div>
         <div ng-hide ="headerControllerModel.$location.url() == '/home' ||
                        headerControllerModel.$location.url() == '/admin/user' ||
@@ -34,9 +39,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right margin-set1">
-                <li ng-if="currentUser">
-                    <a href="#/searchhome" class="margin-set2">Home</a>
-                </li>
+                <!--<li ng-if="currentUser">-->
+                    <!--<a href="#/searchhome" class="margin-set2">Home</a>-->
+                <!--</li>-->
                 <li ng-if="headerControllerModel.$location.url() == '/home'">
                    <a href="#/admin/user" class="margin-set2">Admin</a>
                 </li>
