--- a/public/project-next/client/views/users/profile.view.html
+++ b/public/project-next/client/views/users/profile.view.html
@@ -12,13 +12,13 @@
                 <a href="">Favorite Places</a>
             </li>
             <li>
-                <a href="">Likes</a>
+                <a href="#/{{profileControllerModel.userId}}/profile/likes">Likes</a>
             </li>
             <li>
-                <a href="">Followers</a>
+                <a href="#/{{profileControllerModel.userId}}/profile/followers">Followers</a>
             </li>
             <li>
-                <a href="">Following</a>
+                <a href="#/{{profileControllerModel.userId}}/profile/following">Following</a>
             </li>
         </ul>
     </div>
